Wed, 15 Nov 2006 12:12:13 +0100 <thp@perli.net>
        * setup.py: Added "pt" to list of languages to install
        * data/gpodder.desktop: Added Portuguese description
        * data/po/pt.po: Added Portuguese translation by Joel Calado
        * Makefile: Improved "make cl" target (also process added files)

Tue, 14 Nov 2006 19:44:03 +0100 <thp@perli.net>
        * Makefile: FreeBSD compatibility fix (sed command)
          Thanks to Alain Tauch for reporting this bug

Mon, 13 Nov 2006 12:06:12 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: incorporated (slightly modified) 
          patch from (nikosapi gmail com) to add "time released" and 
          cover (for photo/color/nano iPods) to iTunesDB
        * AUTHORS: updated list of patch writers
        * bin/gpodder: bumped version + release date

Sat, 21 Oct 2006 12:15:30 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Defaulting to 60 minutes podcast time
	  when not able to get real length (and spit out a warning for it)

Sat, 30 Sep 2006 20:34:19 +0200 <thp@perli.net>
        * TODO: updated TODO list

Wed, 20 Sep 2006 13:10:47 +0200 <thp@perli.net>
        * setup.py: Added sv + it to languages list
        * data/po/it.po: Added Italian translation by Antonio Roversi

Thu, 10 Aug 2006 16:28:39 +0200 <thp@perli.net>
        * data/gpodder.desktop: Added patch from Thomas Nilsson

Thu, 10 Aug 2006 15:30:22 +0200 <thp@perli.net>
        * Makefile: Modified some statements to work better on BSD-like
          systems (like Mac OS X)
        * data/po/sv.po: Added Swedish translation by Thomas Nilsson

Mon, 07 Aug 2006 13:57:59 +0200 <thp@perli.net>
	* src/gpodder/libpodcasts.py: Improvements in get_filename
	* src/gpodder/libgpodder.py: Generate new filenames when 
	  different URL channels have same "filename" property, so 
	  these don't collide (thanks to ubunt2@gmail.com for reporting)
	* src/gpodder/gpodder.py: Removed shortname property references